2006-01-15 20:38:12  Sean Middleditch <elanthis@awesomeplay.com>

  * Release 0.24.

2006-01-15 20:29:02  Sean Middleditch <elanthis@awesomeplay.com>

  * The admin-guide and user-guide haven't been updated in years,
    and I'm not likely to ever do so again anytime soon, so they
    are now gone.

2006-01-15 19:33:32  Sean Middleditch <elanthis@awesomeplay.com>

  * Moved ScriptFunction into the Scriptix headers.
  * Rename Scriptix struct 'members' to struct 'properties'.
  * Added a Scriptix::Native type to replace the AweMUD Scriptable
    type.
  * Renamed mud/scripts.[h,cc] to mud/bindings.[h,cc], since that's
    all that code handles now.
  * Require explicit inclusion of hooks.h.
  * Merged mud/scripts.cc into tools/script-code.xsl, which
    is really really ugly, but it means we just have one
    mud/bindings.cc file now, which I sorta like, almost enough
    to ignore the ugliness of merging the code.
  * Began making sure all includes have proper module prefixes,
    so that I can eventually remove the -I./include/mud,
    -I./include/common, -I./include/scriptix flags.

2006-01-13 23:46:20  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix some data files to use the correct parsing format we
    use now.

2006-01-13 19:51:46  Sean Middleditch <elanthis@awesomeplay.com>

  * Apparantly libtool went and changed behavior again, now
    requiring AC_CONFIG_AUX_DIR on some (not all) systems or else
    it puts files in weird-ass places and fails to work.

2006-01-12 21:18:39  Sean Middleditch <elanthis@awesomeplay.com>

  * Script functions can no longer define varargs style variables.
    We weren't using them.  Native functions still have vararg
    style operation, however, since we do use those extensively.

2006-01-12 20:44:58  Sean Middleditch <elanthis@awesomeplay.com>

  * Make 'make distcheck' work.  Involved fixing some genuine
    errors.
  * Reorder appendices in the scripting guide.
