@@ -12,7 +12,6 @@
 #include "mud/exit.h"
 #include "mud/object.h"
 #include "mud/zone.h"
-#include "mud/scriptio.h"
 #include "common/gcvector.h"
 #include "mud/char.h"
 #include "mud/player.h"
