@@ -1,3 +1,8 @@
+2006-01-18 18:29:13  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Build fixes.
+  * Update tools for Cogito/GIT usage.
+
 2006-01-15 20:38:12  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Release 0.24.
